Fix issue with modals being displayed too low

--- a/css/common.scss
+++ b/css/common.scss
@@ -1,6 +1,6 @@
 div.dtsr-confirmation, div.dtsr-creation {
     position: fixed;
-    top: 50%;
+    top: 20%;
     left: 50%;
     width: 500px;
     margin-left: -250px;
